--- a/RaidIsDead/pom.xml
+++ b/RaidIsDead/pom.xml
@@ -8,9 +8,11 @@
     <version>0.0.1-SNAPSHOT</version>
     <build>
         <resources>
+            <!-- Somehow does not work if absent. To investigate       -->
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
+   
             <!-- It is not very clean to put the HTML files with java files -->
             <!-- But so simpler ... -->
             <resource>
@@ -23,13 +25,15 @@
                     <exclude>**/*.java</exclude>
                 </excludes>
             </resource>
-            <!-- Does nothing but nice for netBeans display (alors to find Web.xml -->
+            <!--
+            Does nothing but nice for netBeans display (alows to find Web.xml)
             <resource>
                 <directory>src/main/webapp</directory>
                 <excludes>
                     <exclude>**</exclude>
                 </excludes>
             </resource>
+            -->
         </resources>
         <plugins>
             <!-- plugin for WAR packaging -->
