--- a/RaidIsDead/src/main/webapp/WEB-INF/web.xml
+++ b/RaidIsDead/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
     </filter-mapping>
 
     <filter>
-        <filter-name>arnaudtest123</filter-name>
+        <filter-name>RaidIsDead</filter-name>
         <filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
         <init-param>
             <param-name>applicationFactoryClassName</param-name>
@@ -34,7 +34,7 @@
         </init-param>
     </filter>
     <filter-mapping>
-        <filter-name>arnaudtest123</filter-name>
+        <filter-name>RaidIsDead</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
